Wed Nov 05 15:54:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- remove warning

Wed Nov 05 15:26:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/toodynamic.c(added) include/tds.h:
	* src/tds/mem.c src/tds/query.c src/tds/unittests/Makefile.am:
	- fix problem for too dynamics reported by Man Min Yan

Tue Nov 04 16:24:24 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/cursor3.c:
	- fix SQLGetData with cursors

Tue Nov 04 15:43:25 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/attributes.c src/odbc/unittests/binary_test.c:
	* src/odbc/unittests/blob1.c src/odbc/unittests/cancel.c:
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/compute.c src/odbc/unittests/const_params.c:
	* src/odbc/unittests/convert_error.c src/odbc/unittests/cursor1.c:
	* src/odbc/unittests/cursor2.c src/odbc/unittests/cursor3.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor5.c:
	* src/odbc/unittests/cursor6.c src/odbc/unittests/cursor7.c:
	* src/odbc/unittests/data.c src/odbc/unittests/date.c:
	* src/odbc/unittests/describecol.c src/odbc/unittests/earlybind.c:
	* src/odbc/unittests/error.c src/odbc/unittests/freeclose.c:
	* src/odbc/unittests/funccall.c src/odbc/unittests/genparams.c:
	* src/odbc/unittests/getdata.c src/odbc/unittests/hidden.c:
	* src/odbc/unittests/insert_speed.c src/odbc/unittests/moreandcount.c:
	* src/odbc/unittests/norowset.c src/odbc/unittests/paramcore.c:
	* src/odbc/unittests/params.c src/odbc/unittests/prepare_results.c:
	* src/odbc/unittests/preperror.c src/odbc/unittests/print.c:
	* src/odbc/unittests/putdata.c src/odbc/unittests/raiserror.c:
	* src/odbc/unittests/rebindpar.c src/odbc/unittests/rownumber.c:
	* src/odbc/unittests/rowset.c src/odbc/unittests/rpc.c: